Slow slidding with a big image in the UV/image editor. #35292

Closed
opened 2013-05-10 13:16:07 +02:00 by Alberto Velázquez · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bits, GTX240
Quad 8400
8GB DDR3

- Blender version with error, and version that worked ---

2.67 oficial

- Short description of error ---

When you try to slide a edge in a very simple object the slide is not smooth, it have lag. This only happens in my scene, new scenes don't have the same problem. The problem only happens with slide, not with the other tools taht I have tested.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I cannot upload all the scene and original image problem for the copyright, in this scene the problem is obvious. Creating a new scene similar the problem doesn't happen.

I have uploaded a little version of the scene with one object and a big texture (error.blend). You can try opening the file that I have attached and putting the second window maximize, work in the same monitor. at least in my PC this work and I can see the problem sliding any edge. Closing the UV/image editor windows solve the problem.

Also I have uploaded other file (error2.blend) with a new scene with same object, texture and layout where you cannot find the problem.%%%

%%%--- Operating System, Graphics card --- Windows 7 64bits, GTX240 Quad 8400 8GB DDR3 - Blender version with error, and version that worked --- 2.67 oficial - Short description of error --- When you try to slide a edge in a very simple object the slide is not smooth, it have lag. This only happens in my scene, new scenes don't have the same problem. The problem only happens with slide, not with the other tools taht I have tested. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I cannot upload all the scene and original image problem for the copyright, in this scene the problem is obvious. Creating a new scene similar the problem doesn't happen. I have uploaded a little version of the scene with one object and a big texture (error.blend). You can try opening the file that I have attached and putting the second window maximize, work in the same monitor. at least in my PC this work and I can see the problem sliding any edge. Closing the UV/image editor windows solve the problem. Also I have uploaded other file (error2.blend) with a new scene with same object, texture and layout where you cannot find the problem.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35292
No description provided.