Fix #35292: edge slide slow with big image in image editor. Avoid redrawing the image editor during slide like other operators, instant feedback can be nice but is not so important here and we don't have notifiers fine grained enough to avoid full redraws.